# Masterarbeit_EEG_Uncertainties

./: .gitignore  README.md
masterarbeit/2d/: MLDA.ipynb  config.json  eeg_model.py  eeg_transfer_approach_mesh_via_file.py  evaluations.py  example1.ipynb  leadfield.py  main.py  performance.ipynb  plot.ipynb  results_MH.ipynb  results_MH_orientation.ipynb  structured_mesh.py  test.ini  utility_functions.py
masterarbeit/data/: conductivities.txt  dipoles_ecc_0.99_radial.txt  electrodes.py  electrodes.txt  electrodes_1005.txt  electrodes_1010.txt  electrodes_1020.txt  leadfield_matrix.npz  leadfield_matrix_100_L1.npz  leadfield_matrix_100_L2.npz  leadfield_matrix_100_L3.npz  leadfield_matrix_L1.npz  leadfield_matrix_L2.npz  leadfield_matrix_L3.npz
masterarbeit/python/: draw_plots.ipynb  eeg_model.py  eeg_transfer_approach_mesh_via_file.py  leadfield.py  leadfield_matrix.py  main.py  plot mlda.ipynb  plot.ipynb  save_midpoints.py  server.py  sphere_cg_hex_direct.py  sphere_cg_tet_transfer.py  structured_mesh.py  test copy.py  test.py  transfer_matrix.py  utility_functions.py
muq2/: .gitignore  bitbucket-pipelines.yml  readme.md
muq2/cmake/: ExternalOptions.cmake
muq2/documentation/: muq.doxyfile.in  references.bib
muq2/examples/: CMakeLists.txt
muq2/examples/Modeling/FlowEquation/cpp/: CMakeLists.txt  FlowEquation.cpp  meta.yml
muq2/examples/Modeling/FlowEquation/python/: DarcyFlow.ipynb  meta.yml
muq2/examples/Modeling/UMBridge/: CMakeLists.txt  FlowEquation.h  UMBridgeModelClient.cpp  UMBridgeModelServer.cpp  meta.yml
muq2/examples/SamplingAlgorithms/MC/Example1_Gaussian/: MultilevelMonteCarlo.cpp
muq2/examples/SamplingAlgorithms/MCMC/BasicMetropolisInGibbs/python/: BasicMetropolisInGibbs.ipynb  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/CustomGaussianProposal/cpp/: CustomProposal.cpp
muq2/examples/SamplingAlgorithms/MCMC/CustomGaussianProposal/python/: CrankNicolson.ipynb
muq2/examples/SamplingAlgorithms/MCMC/DimensionIndependence/python/: DimensionIndependence.ipynb  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/EllipticInference/cpp/: .gitignore  CMakeLists.txt  FlowEquation.h  InvariantSampling.cpp
muq2/examples/SamplingAlgorithms/MCMC/EllipticInference/python/: .gitignore
muq2/examples/SamplingAlgorithms/MCMC/EllipticInference/python/DILI/: EllipticInference.ipynb  FlowEquation.py  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/EllipticInference/python/DelayedRejection/: EllipticInference.py  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/Example1_Gaussian/cpp/: GaussianSampling.cpp
muq2/examples/SamplingAlgorithms/MCMC/Example1_Gaussian/python/: GaussianSampling.ipynb
muq2/examples/SamplingAlgorithms/MCMC/Example2_GaussianInverseGamma/python/: GaussianGammaSampling.ipynb
muq2/examples/SamplingAlgorithms/MCMC/Example3_MultilevelGaussian/cpp/: CMakeLists.txt  FullParallelMultilevelGaussianSampling.cpp  ModelParallelMultilevelGaussianSampling.cpp  MultilevelMCMC_AdvancedInterface.cpp  MultilevelMCMC_BasicInterface.cpp  ParallelProblem.h  Problem.h  SubsamplingTestMultilevelGaussianSampling.cpp  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/Example3_MultilevelGaussian/python/: MultilevelGaussianSampling.ipynb  meta.yml
muq2/examples/SamplingAlgorithms/MCMC/Example4_MultiindexGaussian/cpp/: FullParallelMultiindexGaussianSampling.cpp
muq2/examples/SamplingAlgorithms/MCMC/Example5_EEGModel/cpp/: CMakeLists.txt  MultiindexGaussianSampling.cpp
muq2/examples/SamplingAlgorithms/MCMC/Example5_EEGModel/python/: MultiindexGaussianSampling.ipynb
muq2/examples/SamplingAlgorithms/MCMC/MLDA/cpp/: CMakeLists.txt  MLDA.cpp  meta.yml  plot.ipynb
muq2/examples/SamplingAlgorithms/MCMC/MultilevelMCMC_FlowModel/cpp/: CMakeLists.txt  FlowEquation.h  FlowModelComponents.cpp  FlowModelComponents.h  MultilevelMCMC_FLowModel.cpp  _plot-results.py
muq2/joss/: paper.bib  (+1 more)
(+211 files in other folders)
